--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@strapi/email": "^5.0.6",
     "@strapi/plugin-cloud": "5.0.2",
     "@strapi/plugin-users-permissions": "5.0.2",
     "@strapi/strapi": "5.0.2",
